--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
       <div class="container">
-        <a class="navbar-brand" href="#"><span class="text-primary">KP</span> Network</a>
+        <a class="navbar-brand" href="#"><span class="text-primary">Dragon</span> MD</a>
 
         <form action="#">
           <div class="input-group input-navbar">
@@ -100,15 +100,15 @@
         <div class="col-sm-6 col-lg-3 py-3">
           <h5>Follow Us</h5>
           <div class="footer-sosmed mt-3">
-            <a href="https://github.com/KPNetwork" target="_blank"><span class="mai-logo-github"></span></a>
-            <a href="https://m.youtube.com/channel/UC_-caKrhcU3J_ktLQYInwuw" target="_blank"><span class="mai-logo-youtube"></span></a>
+            <a href="https://github.com/TechwithAmee1" target="_blank"><span class="mai-logo-github"></span></a>
+            <a href="https://youtube.com/@Dragon-MD-OFC" target="_blank"><span class="mai-logo-youtube"></span></a>
           </div>
         </div>
       </div>
 
       <hr>
 
-      <p id="copyright">&copy; Copyright 2022 KP Network All Rights Reserved 🇱🇰</p>
+      <p id="copyright">&copy; Copyright 2020-2023© Dragon MD All Rights Reserved 🇱🇰</p>
     </div>
   </footer>
 
